revamping skills page + fixing skills overlay issue + check Aboutme page container alignment with homepage

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -63,7 +63,7 @@ h1, h2 {
 
 #about-me {
     padding: 2% 0 5% 10%;
-    /* position: relative */
+    position: relative
 }
 
 #about-me h2 {
